--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -13,6 +13,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://unpkg.com/@hotwired/turbo@7.2.0"></script>
     <script src="{% static 'app/js/main.js' %}"></script>
     {% block extra_css %}
     <link rel="stylesheet" href="{% static 'app/css/styles.css' %}">
