--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -12,9 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="https://unpkg.com/@hotwired/turbo@7.2.0"></script>
-    <script src="{% static 'app/js/main.js' %}"></script>
+    <script src="https://unpkg.com/swup@4"></script>
+
     {% block extra_css %}
     <link rel="stylesheet" href="{% static 'app/css/styles.css' %}">
     {% endblock %}
@@ -122,7 +121,8 @@
         Copyright ©2025
       </footer>
     </div>
-
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="{% static 'app/js/main.js' %}"></script>
   </body>
 
 </html>
