--- a/app/templates/app/my_account.html
+++ b/app/templates/app/my_account.html
@@ -184,6 +184,7 @@
                                             <th>Height (cm)</th>
                                             <th>Weight (kg)</th>
                                             <th>BMI</th>
+                                            <th>Health Status</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -193,6 +194,7 @@
                                             <td>{{ log.height }}</td>
                                             <td>{{ log.weight }}</td>
                                             <td>{{ log.bmi }}</td>
+                                            <td>{{ log.health_status }}</td>
                                         </tr>
                                         {% endfor %}
                                     </tbody>
