--- a/app/templates/app/menu.html
+++ b/app/templates/app/menu.html
@@ -244,4 +244,24 @@
         </div>
     </div>
 </div>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    var swiper = new Swiper(".bannerSwiper", {
+      loop: true,
+      autoplay: {
+        delay: 4000, // Chuyển slide sau 3 giây
+        disableOnInteraction: false,
+      },
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+    });
+  });
+</script>
+
 {% endblock %}
