--- a/app/templates/app/aboutus.html
+++ b/app/templates/app/aboutus.html
@@ -7,7 +7,7 @@
     <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
         <div class="content"></div>
         <div class="image">
-            <img src="{% static 'app/images/banner.jpg' %}" alt="" />
+            <img src="{% static 'app/images/aboutmain.png' %}" alt="" />
         </div>
     </section>
 
@@ -21,7 +21,7 @@
             </ul>
         </div>
         <div class="image">
-            <img src="{% static 'app/images/spotlight01.jpg' %}" alt="" />
+            <img src="{% static 'app/images/about3.png' %}" alt="" />
         </div>
     </section>
 
@@ -36,7 +36,7 @@
             </ul>
         </div>
         <div class="image">
-            <img src="{% static 'app/images/spotlight02.jpg' %}" alt="" />
+            <img src="{% static 'app/images/about1.png' %}" alt="" />
         </div>
     </section>
 
@@ -53,7 +53,7 @@
             </ul>
         </div>
         <div class="image">
-            <img src="{% static 'app/images/spotlight03.jpg' %}" alt="" />
+            <img src="{% static 'app/images/about2.png' %}" alt="" />
         </div>
     </section>
 
