--- a/app/templates/app/menu.html
+++ b/app/templates/app/menu.html
@@ -70,6 +70,34 @@
 
 </main>
 
+{% if new_products %}
+<div id="menu_new" class="bg-white-100 py-12">
+    <div class="container mx-auto px-4">
+        <h1 class="text-center text-2xl font-bold mb-8 text-[#FFB7B2]">
+            NEW PRODUCTS
+        </h1>
+        <div class="relative">
+            <div id="scrollContainer_new" class="flex overflow-hidden space-x-6 p-4">
+                {% for product in new_products %}
+                    <a href="{% url 'detail' %}?id={{ product.id }}" class="block w-1/3 flex-shrink-0 text-center bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition-all relative">
+                        <div class="overflow-hidden rounded-lg">
+                            <img src="{{ product.imageURL }}" alt="{{ product.name }}" class="w-full h-64 object-cover rounded-lg transform group-hover:scale-105 transition-all duration-300"/>
+                        </div>
+                        <h2 class="text-lg font-bold mt-4 text-black">
+                            {{ product.name }}
+                            {% if product.is_new %}
+                                <span class="text-xs bg-red-500 text-white px-2 py-1 rounded-full">NEW</span>
+                            {% endif %}
+                        </h2>
+                    </a>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+{% endif %}
+
+
 {% if recommended_products %}
 <div id="menu_recommendations" class="bg-white-100 py-12">
     <div class="container mx-auto px-4">
